--- a/artikel-manfaat-outbound.html
+++ b/artikel-manfaat-outbound.html
@@ -21,15 +21,24 @@
     <!-- Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
-    <!-- Bootstrap 5 -->
+    <!-- Bootstrap 5 (critical) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet" />
+    <!-- Bootstrap Icons (deferred) -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    </noscript>
+    <!-- Google Fonts (deferred) -->
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+            rel="stylesheet">
+    </noscript>
 
     <!-- Article Schema -->
     <script type="application/ld+json">
@@ -611,8 +620,8 @@
         <div class="container">
             <div class="article-content">
 
-                <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=1200&q=80"
-                    alt="Outbound Batu Malang" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=780&q=75"
+                    alt="Outbound Batu Malang" loading="lazy" width="780" height="440" />
 
                 <p>Outbound bukan sekadar liburan atau acara jalan-jalan biasa. Kegiatan ini merupakan metode pelatihan
                     yang dirancang secara khusus untuk meningkatkan kualitas sumber daya manusia melalui pengalaman
@@ -648,8 +657,8 @@
                     dalam suasana santai terbukti efektif untuk menurunkan tingkat stres dan meningkatkan kesejahteraan
                     mental karyawan.</p>
 
-                <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?auto=format&fit=crop&w=1200&q=80"
-                    alt="Tim bahagia" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?auto=format&fit=crop&w=780&q=75"
+                    alt="Tim bahagia" loading="lazy" width="780" height="440" />
 
                 <h2>4. Meningkatkan Motivasi dan Produktivitas</h2>
                 <p>Karyawan yang merasa dihargai dan diperhatikan oleh perusahaan cenderung memiliki motivasi kerja yang
@@ -695,8 +704,8 @@
             <div class="row g-4">
                 <div class="col-md-6">
                     <div class="related-card">
-                        <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=800&q=80"
-                            alt="Offroad" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=400&q=75"
+                            alt="Offroad" loading="lazy" width="400" height="200">
                         <div class="card-body">
                             <h5><a href="artikel-offroad-coban-talun.html">Panduan Lengkap Offroad di Coban Talun,
                                     Batu</a></h5>
@@ -706,7 +715,8 @@
                 </div>
                 <div class="col-md-6">
                     <div class="related-card">
-                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting" loading="lazy">
+                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting" loading="lazy"
+                            width="400" height="200">
                         <div class="card-body">
                             <h5><a href="artikel-rafting-batu-malang.html">Kenapa Batu Malang Jadi Lokasi Rafting
                                     Terbaik?</a></h5>
@@ -776,7 +786,7 @@
                 class="bi bi-chevron-up"></i></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>
         window.addEventListener('scroll', () => {
             const nav = document.querySelector('.navbar');
