--- a/artikel-offroad-coban-talun.html
+++ b/artikel-offroad-coban-talun.html
@@ -20,15 +20,24 @@
     <!-- Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
-    <!-- Bootstrap 5 -->
+    <!-- Bootstrap 5 (critical) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet" />
+    <!-- Bootstrap Icons (deferred) -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    </noscript>
+    <!-- Google Fonts (deferred) -->
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+            rel="stylesheet">
+    </noscript>
 
     <!-- Article Schema -->
     <script type="application/ld+json">
@@ -603,8 +612,8 @@
         <div class="container">
             <div class="article-content">
 
-                <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=1200&q=80"
-                    alt="Offroad Coban Talun" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=780&q=75"
+                    alt="Offroad Coban Talun" loading="lazy" width="780" height="440" />
 
                 <p>Bagi Anda yang haus akan adrenalin dan petualangan, offroad di kawasan Coban Talun, Kota Batu, adalah
                     pengalaman yang wajib dicoba. Terletak di ketinggian sekitar 1.200 meter di atas permukaan laut,
@@ -636,8 +645,8 @@
                     kondisi sehat dan tidak memiliki riwayat penyakit jantung atau tekanan darah tinggi, karena
                     perjalanan bisa cukup mendebarkan.</p>
 
-                <img src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?auto=format&fit=crop&w=1200&q=80"
-                    alt="Jeep Adventure" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?auto=format&fit=crop&w=780&q=75"
+                    alt="Jeep Adventure" loading="lazy" width="780" height="440" />
 
                 <h2>Rute dan Durasi Perjalanan</h2>
                 <p>Perjalanan offroad di Coban Talun umumnya berlangsung selama 1,5 hingga 2 jam, tergantung pada paket
@@ -686,8 +695,8 @@
             <div class="row g-4">
                 <div class="col-md-6">
                     <div class="related-card">
-                        <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=800&q=80"
-                            alt="Outbound" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=400&q=75"
+                            alt="Outbound" loading="lazy" width="400" height="200">
                         <div class="card-body">
                             <h5><a href="artikel-manfaat-outbound.html">5 Manfaat Outbound bagi Karyawan Perusahaan</a>
                             </h5>
@@ -698,7 +707,8 @@
                 </div>
                 <div class="col-md-6">
                     <div class="related-card">
-                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting" loading="lazy">
+                        <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting" loading="lazy"
+                            width="400" height="200">
                         <div class="card-body">
                             <h5><a href="artikel-rafting-batu-malang.html">Kenapa Batu Malang Jadi Lokasi Rafting
                                     Terbaik?</a></h5>
@@ -768,7 +778,7 @@
                 class="bi bi-chevron-up"></i></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>
         window.addEventListener('scroll', () => {
             const nav = document.querySelector('.navbar');
