--- a/artikel-rafting-batu-malang.html
+++ b/artikel-rafting-batu-malang.html
@@ -21,15 +21,24 @@
     <!-- Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
-    <!-- Bootstrap 5 -->
+    <!-- Bootstrap 5 (critical) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet" />
+    <!-- Bootstrap Icons (deferred) -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    </noscript>
+    <!-- Google Fonts (deferred) -->
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+            rel="stylesheet">
+    </noscript>
 
     <!-- Article Schema -->
     <script type="application/ld+json">
@@ -604,7 +613,8 @@
         <div class="container">
             <div class="article-content">
 
-                <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure" loading="lazy" />
+                <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure" loading="lazy"
+                    width="780" height="440" />
 
                 <p>Batu Malang bukan hanya dikenal sebagai kota wisata dengan udara sejuk dan apel yang manis. Di balik
                     keindahan alamnya, tersimpan potensi wisata air yang luar biasa — khususnya rafting. Aliran sungai
@@ -638,8 +648,8 @@
                     tajam dan lekukan-lekukan sungai yang membutuhkan koordinasi tim yang solid. Sungai ini cocok untuk
                     tim yang sudah pernah mencoba rafting sebelumnya.</p>
 
-                <img src="https://images.unsplash.com/photo-1551632811-561732d1e306?auto=format&fit=crop&w=1200&q=80"
-                    alt="Rafting Team" loading="lazy" />
+                <img src="https://images.unsplash.com/photo-1551632811-561732d1e306?auto=format&fit=crop&w=780&q=75"
+                    alt="Rafting Team" loading="lazy" width="780" height="440" />
 
                 <h2>Mengapa Rafting Cocok untuk Team Building?</h2>
                 <p>Rafting bukan hanya soal menaklukkan jeram. Ada banyak nilai team building yang bisa dipetik dari
@@ -697,8 +707,8 @@
             <div class="row g-4">
                 <div class="col-md-6">
                     <div class="related-card">
-                        <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=800&q=80"
-                            alt="Outbound" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=400&q=75"
+                            alt="Outbound" loading="lazy" width="400" height="200">
                         <div class="card-body">
                             <h5><a href="artikel-manfaat-outbound.html">5 Manfaat Outbound bagi Karyawan Perusahaan</a>
                             </h5>
@@ -709,8 +719,8 @@
                 </div>
                 <div class="col-md-6">
                     <div class="related-card">
-                        <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=800&q=80"
-                            alt="Offroad" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=400&q=75"
+                            alt="Offroad" loading="lazy" width="400" height="200">
                         <div class="card-body">
                             <h5><a href="artikel-offroad-coban-talun.html">Panduan Lengkap Offroad di Coban Talun,
                                     Batu</a></h5>
@@ -780,7 +790,7 @@
                 class="bi bi-chevron-up"></i></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>
         window.addEventListener('scroll', () => {
             const nav = document.querySelector('.navbar');
