--- a/blog.html
+++ b/blog.html
@@ -20,15 +20,24 @@
     <!-- Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
-    <!-- Bootstrap 5 -->
+    <!-- Bootstrap 5 (critical) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet" />
+    <!-- Bootstrap Icons (deferred) -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    </noscript>
+    <!-- Google Fonts (deferred) -->
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+            rel="stylesheet">
+    </noscript>
 
     <style>
         /* ─── TOKENS ─── */
@@ -550,8 +559,8 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-card">
                         <div class="blog-img-wrapper">
-                            <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=800&q=80"
-                                alt="Outbound Batu" loading="lazy">
+                            <img src="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=400&q=75"
+                                alt="Outbound Batu" loading="lazy" width="400" height="220">
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -572,8 +581,8 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-card">
                         <div class="blog-img-wrapper">
-                            <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=800&q=80"
-                                alt="Offroad Coban Talun" loading="lazy">
+                            <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=400&q=75"
+                                alt="Offroad Coban Talun" loading="lazy" width="400" height="220">
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -595,7 +604,7 @@
                     <div class="blog-card">
                         <div class="blog-img-wrapper">
                             <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure"
-                                loading="lazy">
+                                loading="lazy" width="400" height="220">
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -694,7 +703,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>
         // Navbar scroll & Floating top button effect
         window.addEventListener('scroll', () => {
