--- a/index.html
+++ b/index.html
@@ -38,16 +38,29 @@
     <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://cdn.jsdelivr.net">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
-    <!-- Bootstrap 5 -->
+    <!-- Preload LCP hero background -->
+    <link rel="preload" as="image"
+        href="https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=1200&q=75"
+        fetchpriority="high">
+
+    <!-- Bootstrap 5 (critical) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet" />
+    <!-- Bootstrap Icons (deferred) -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    </noscript>
+    <!-- Google Fonts (deferred) -->
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;600;700&display=swap"
+            rel="stylesheet">
+    </noscript>
 
     <!-- Structured Data (JSON-LD) for Local Business -->
     <script type="application/ld+json">
@@ -223,7 +236,7 @@
         .hero-bg {
             position: absolute;
             inset: 0;
-            background: url('https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=2070&q=80') center/cover no-repeat;
+            background: url('https://images.unsplash.com/photo-1590012314607-cda9d9b699ae?auto=format&fit=crop&w=1200&q=75') center/cover no-repeat;
             transform: scale(1.05);
             animation: heroZoom 18s ease-in-out infinite alternate;
         }
@@ -414,6 +427,8 @@
         /* ─── SERVICES ─── */
         .services-section {
             background: #0F1F12;
+            content-visibility: auto;
+            contain-intrinsic-size: auto 800px;
         }
 
         .service-card {
@@ -469,6 +484,8 @@
         /* ─── PACKAGES ─── */
         .packages-section {
             background: var(--dark);
+            content-visibility: auto;
+            contain-intrinsic-size: auto 600px;
         }
 
         .pkg-card {
@@ -591,6 +608,8 @@
         /* ─── ABOUT ─── */
         .about-section {
             background: #0F1F12;
+            content-visibility: auto;
+            contain-intrinsic-size: auto 700px;
         }
 
         .about-img-grid {
@@ -1119,8 +1138,8 @@
                 <!-- Card 1 -->
                 <div class="col-6 col-lg-3">
                     <div class="pkg-card">
-                        <img src="https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?auto=format&fit=crop&w=800&q=80"
-                            alt="Outbound Hemat" loading="lazy" />
+                        <img src="https://images.unsplash.com/photo-1548438294-1ad5d5f4f063?auto=format&fit=crop&w=400&q=75"
+                            alt="Outbound Hemat" loading="lazy" width="400" height="480" />
                         <div class="pkg-overlay"></div>
                         <div class="pkg-content">
                             <span class="pkg-badge">Terpopuler</span>
@@ -1133,8 +1152,8 @@
                 <!-- Card 2 -->
                 <div class="col-6 col-lg-3">
                     <div class="pkg-card">
-                        <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=800&q=80"
-                            alt="Jalur Offroad" loading="lazy" />
+                        <img src="https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8?auto=format&fit=crop&w=400&q=75"
+                            alt="Jalur Offroad" loading="lazy" width="400" height="480" />
                         <div class="pkg-overlay"></div>
                         <div class="pkg-content">
                             <div class="pkg-title">Jalur Offroad</div>
@@ -1146,8 +1165,8 @@
                 <!-- Card 3 -->
                 <div class="col-6 col-lg-3">
                     <div class="pkg-card">
-                        <img src="https://images.unsplash.com/photo-1552674605-db6ffd4facb5?auto=format&fit=crop&w=800&q=80"
-                            alt="Paket Paintball" loading="lazy" />
+                        <img src="https://images.unsplash.com/photo-1552674605-db6ffd4facb5?auto=format&fit=crop&w=400&q=75"
+                            alt="Paket Paintball" loading="lazy" width="400" height="480" />
                         <div class="pkg-overlay"></div>
                         <div class="pkg-content">
                             <div class="pkg-title">Paket Paintball</div>
@@ -1159,7 +1178,7 @@
                 <div class="col-6 col-lg-3">
                     <div class="pkg-card">
                         <img src="images/Rafting di Sungai Brantas Batu Malang.webp" alt="Rafting Adventure"
-                            loading="lazy" />
+                            loading="lazy" width="400" height="480" />
                         <div class="pkg-overlay"></div>
                         <div class="pkg-content">
                             <div class="pkg-title">Rafting Adventure</div>
@@ -1191,14 +1210,14 @@
                 <div class="col-lg-6">
                     <div class="row g-3">
                         <div class="col-6">
-                            <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=600&q=80"
+                            <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=400&q=75"
                                 alt="Team 1" class="w-100 rounded-4 shadow-lg" style="height:250px;object-fit:cover;"
-                                loading="lazy" />
+                                loading="lazy" width="400" height="250" />
                         </div>
                         <div class="col-6">
-                            <img src="https://images.unsplash.com/photo-1515187029135-18ee286d815b?auto=format&fit=crop&w=600&q=80"
+                            <img src="https://images.unsplash.com/photo-1515187029135-18ee286d815b?auto=format&fit=crop&w=400&q=75"
                                 alt="Team 2" class="w-100 rounded-4 shadow-lg" style="height:250px;object-fit:cover;"
-                                loading="lazy" />
+                                loading="lazy" width="400" height="250" />
                         </div>
                     </div>
                 </div>
@@ -1232,14 +1251,14 @@
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="about-img-grid">
-                        <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?auto=format&fit=crop&w=600&q=80"
-                            alt="Activity 1" />
-                        <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?auto=format&fit=crop&w=600&q=80"
-                            alt="Activity 2" />
-                        <img src="https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=600&q=80"
-                            alt="Activity 3" />
-                        <img src="https://images.unsplash.com/photo-1533560904424-a0c61dc306fc?auto=format&fit=crop&w=600&q=80"
-                            alt="Activity 4" />
+                        <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?auto=format&fit=crop&w=300&q=75"
+                            alt="Activity 1" loading="lazy" width="300" height="250" />
+                        <img src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?auto=format&fit=crop&w=300&q=75"
+                            alt="Activity 2" loading="lazy" width="300" height="250" />
+                        <img src="https://images.unsplash.com/photo-1517649763962-0c623066013b?auto=format&fit=crop&w=300&q=75"
+                            alt="Activity 3" loading="lazy" width="300" height="250" />
+                        <img src="https://images.unsplash.com/photo-1533560904424-a0c61dc306fc?auto=format&fit=crop&w=300&q=75"
+                            alt="Activity 4" loading="lazy" width="300" height="250" />
                     </div>
                 </div>
             </div>
@@ -1263,8 +1282,8 @@
             <div class="row align-items-center gy-5">
                 <div class="col-lg-5">
                     <div class="why-img position-relative">
-                        <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?auto=format&fit=crop&w=900&q=80"
-                            alt="Team Happy" />
+                        <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?auto=format&fit=crop&w=600&q=75"
+                            alt="Team Happy" loading="lazy" width="600" height="400" />
                         <div class="exp-badge d-none d-md-block">
                             <div class="num">10+</div>
                             <div class="lbl">Tahun Pengalaman</div>
@@ -1431,7 +1450,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>
         // Navbar scroll effect
         window.addEventListener('scroll', () => {
